k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: notes-frontend
  namespace: notes
spec:
  selector:
    app: notes-frontend
  ports:
    - name: http
      port: 80
      targetPort: http
